Bug 1159448 - Thunderbird ignores proxy settings on POP3S protocol, r=neil